fix(inlinenotice): accessible contrast ratio
Updates the InlineNotice component to comply with the the Box Design Language, including changing the text color to an accessible one

--- a/src/styles/common/_inline-notifications.scss
+++ b/src/styles/common/_inline-notifications.scss
@@ -13,25 +13,26 @@
     }
 
     &.inline-alert-warning {
-        color: $bdl-yellorange;
+        color: $bdl-gray;
         background-color: $bdl-yellorange-10;
         border: 1px solid $bdl-yellorange-50;
     }
 
     &.inline-alert-error {
-        color: $bdl-watermelon-red;
+        color: $bdl-gray;
         background-color: $bdl-watermelon-red-10;
         border: 1px solid $bdl-watermelon-red-50;
     }
 
     &.inline-alert-success {
-        color: $bdl-green-light;
+        color: $bdl-gray;
         background-color: $bdl-green-light-10;
         border: 1px solid $bdl-green-light;
     }
 
     &.inline-alert-info {
-        background-color: rgba($bdl-light-blue, .1);
-        border: 1px solid rgba($bdl-box-blue, .4);
+        color: $bdl-gray;
+        background-color: $bdl-light-blue-10;
+        border: 1px solid $bdl-light-blue-50;
     }
 }
